<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#259b00"
    android:baselineAligned="false"
    android:clickable="false"
    android:longClickable="true"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:measureWithLargestChild="false"
    android:adjustViewBounds="true"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:minHeight="0dp"
    android:minWidth="0dp">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first"
            android:textSize="30sp"
            android:layout_margin="2dp"
            android:gravity="center"
            android:textColor="#fbf706"
            />


    <Button
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_button"
            android:layout_margin="5dp"
            android:onClick="onNextClick1"
            />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ToggleButton
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_button"
            android:textOff=""
            android:textOn="" />


    </RelativeLayout>

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="5dp"
            android:id="@+id/imageButton"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_directions_train_yellow_a200_36dp"
            android:background="#259b00"
            android:scaleType="fitCenter"
            android:contentDescription="@string/info"
            android:longClickable="true" />


        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|end"
                android:textColor="#fbf706"
                android:text="@string/version"
                android:textSize="20sp"
                />
        </RelativeLayout>



    </LinearLayout>
</ScrollView>

</LinearLayout>